manifests/operator.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# NOTE: This file is autogenerated.
apiVersion: v1
kind: Namespace
metadata:
  name: gmp-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: gmp-public
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: gmp-system
  name: gmp-operator
  labels:
    app: managed-prometheus-operator
    app.kubernetes.io/name: gmp-operator
    app.kubernetes.io/component: operator
    app.kubernetes.io/part-of: gmp
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gmp-operator
      app.kubernetes.io/component: operator
      app.kubernetes.io/part-of: gmp
  template:
    metadata:
      labels:
        app: managed-prometheus-operator
        app.kubernetes.io/name: gmp-operator
        app.kubernetes.io/component: operator
        app.kubernetes.io/part-of: gmp
    spec:
      serviceAccountName: operator
      automountServiceAccountToken: true
      containers:
      - name: operator
        image: gke.gcr.io/prometheus-engine/operator:v0.4.3-gke.0
        args:
        - "--operator-namespace=gmp-system"
        - "--public-namespace=gmp-public"
        - "--webhook-addr=:10250"
        - "--collector-memory-limit=16000"
        ports:
        - name: web
          # Note this should match the --listen-addr flag passed in to the operator args.
          # Default is 10250.
          containerPort: 10250
        - name: metrics
          # Note this should match the --metrics-addr flag passed in to the operator args.
          # Default is 18080.
          containerPort: 18080
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          capabilities:
            drop:
            - all
          runAsUser: 1000
          runAsGroup: 1000
          runAsNonRoot: true
      securityContext:
        seccompProfile:
          type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  namespace: gmp-system
  name: gmp-operator
spec:
  selector:
    app.kubernetes.io/name: gmp-operator
    app.kubernetes.io/component: operator
    app.kubernetes.io/part-of: gmp
  ports:
  # This port does not do anything, but allows upgrades in the case
  # of server-side apply (SSA) conflicts.
  # TODO(pintohutch): remove once the SSA issues from upgrades are resolved.
  - protocol: TCP
    port: 8443
    targetPort: webhook
    name: legacy
  - protocol: TCP
    port: 443
    targetPort: web
    name: webhook
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: gmp-operator.gmp-system.monitoring.googleapis.com
webhooks:
- name: validate.podmonitorings.gmp-operator.gmp-system.monitoring.googleapis.com
  admissionReviewVersions:
  - v1
  clientConfig:
    # caBundle populated by operator.
    service:
      namespace: gmp-system
      name: gmp-operator
      path: /validate/monitoring.googleapis.com/v1/podmonitorings
      port: 443
  failurePolicy: Fail
  sideEffects: None
  rules:
  - apiGroups:
    - monitoring.googleapis.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - podmonitorings
- name: validate.clusterpodmonitorings.gmp-operator.gmp-system.monitoring.googleapis.com
  admissionReviewVersions:
  - v1
  clientConfig:
    # caBundle populated by operator.
    service:
      namespace: gmp-system
      name: gmp-operator
      path: /validate/monitoring.googleapis.com/v1/clusterpodmonitorings
      port: 443
  failurePolicy: Fail
  sideEffects: None
  rules:
  - apiGroups:
    - monitoring.googleapis.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - clusterpodmonitorings
- name: validate.rules.gmp-operator.gmp-system.monitoring.googleapis.com
  admissionReviewVersions:
  - v1
  clientConfig:
    # caBundle populated by operator.
    service:
      namespace: gmp-system
      name: gmp-operator
      path: /validate/monitoring.googleapis.com/v1/rules
      port: 443
  failurePolicy: Fail
  sideEffects: None
  rules:
  - apiGroups:
    - monitoring.googleapis.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - rules
- name: validate.clusterrules.gmp-operator.gmp-system.monitoring.googleapis.com
  admissionReviewVersions:
  - v1
  clientConfig:
    # caBundle populated by operator.
    service:
      namespace: gmp-system
      name: gmp-operator
      path: /validate/monitoring.googleapis.com/v1/clusterrules
      port: 443
  failurePolicy: Fail
  sideEffects: None
  rules:
  - apiGroups:
    - monitoring.googleapis.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - clusterrules
- name: validate.globalrules.gmp-operator.gmp-system.monitoring.googleapis.com
  admissionReviewVersions:
  - v1
  clientConfig:
    # caBundle populated by operator.
    service:
      namespace: gmp-system
      name: gmp-operator
      path: /validate/monitoring.googleapis.com/v1/globalrules
      port: 443
  failurePolicy: Fail
  sideEffects: None
  rules:
  - apiGroups:
    - monitoring.googleapis.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - globalrules
- name: validate.operatorconfigs.gmp-operator.gmp-system.monitoring.googleapis.com
  admissionReviewVersions:
  - v1
  clientConfig:
    # caBundle populated by operator.
    service:
      namespace: gmp-system
      name: gmp-operator
      path: /validate/monitoring.googleapis.com/v1/operatorconfigs
      port: 443
  failurePolicy: Fail
  sideEffects: None
  rules:
  - apiGroups:
    - monitoring.googleapis.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - operatorconfigs
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: gmp-operator.gmp-system.monitoring.googleapis.com
webhooks:
- name: default.podmonitorings.gmp-operator.gmp-system.monitoring.googleapis.com
  admissionReviewVersions:
  - v1
  clientConfig:
    # caBundle populated by operator.
    service:
      namespace: gmp-system
      name: gmp-operator
      path: /default/monitoring.googleapis.com/v1/podmonitorings
      port: 443
  failurePolicy: Fail
  sideEffects: None
  rules:
  - apiGroups:
    - monitoring.googleapis.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - podmonitorings
- name: default.clusterpodmonitorings.gmp-operator.gmp-system.monitoring.googleapis.com
  admissionReviewVersions:
  - v1
  clientConfig:
    # caBundle populated by operator.
    service:
      namespace: gmp-system
      name: gmp-operator
      path: /default/monitoring.googleapis.com/v1/clusterpodmonitorings
      port: 443
  failurePolicy: Fail
  sideEffects: None
  rules:
  - apiGroups:
    - monitoring.googleapis.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - clusterpodmonitorings
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  namespace: gmp-system
  name: collector
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: collector
  template:
    metadata:
      labels:
        app: managed-prometheus-collector
        app.kubernetes.io/name: collector
      annotations:
        components.gke.io/component-name: managed_prometheus
        # The emptyDir for the storage and config directories prevents cluster
        # autoscaling unless this annotation is set.
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
        kubernetes.io/os: linux
      containers:
      - name: prometheus
        image: gke.gcr.io/prometheus-engine/prometheus:v2.35.0-gmp.2-gke.0
        args:
        - --config.file=/prometheus/config_out/config.yaml
        - --storage.tsdb.path=/prometheus/data
        - --storage.tsdb.no-lockfile
        # Keep 30 minutes of data. As we are backed by an emptyDir volume, this will count towards
        # the containers memory usage. We could lower it further if this becomes problematic, but
        # it the window for local data is quite convenient for debugging.
        - --storage.tsdb.retention.time=30m
        - --storage.tsdb.wal-compression
        # Effectively disable compaction and make blocks short enough so that our retention window
        # can be kept in practice.
        - --storage.tsdb.min-block-duration=10m
        - --storage.tsdb.max-block-duration=10m
        - --web.listen-address=:19090
        - --web.enable-lifecycle
        - --web.route-prefix=/
        - --export.user-agent=prometheus/2.35.0-gmp.2 (mode:kubectl)
        # The environment variable EXTRA_ARGS will be populated by the operator.
        # DO NOT specify it here.
        ports:
        - name: prom-metrics
          containerPort: 19090
        livenessProbe:
          httpGet:
            path: /-/healthy
            port: 19090
            scheme: HTTP
        readinessProbe:
          httpGet:
            path: /-/ready
            port: 19090
            scheme: HTTP
        resources:
          limits:
            cpu: 1000m
            memory: 3G
          requests:
            cpu: 100m
            memory: 200M
        volumeMounts:
        - name: storage
          mountPath: /prometheus/data
        - name: config-out
          mountPath: /prometheus/config_out
          readOnly: true
        - name: collection-secret
          mountPath: /etc/secrets
          readOnly: true
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          capabilities:
            drop:
            - all
          runAsUser: 1000
          runAsGroup: 1000
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
      - name: config-reloader
        image: gke.gcr.io/prometheus-engine/config-reloader:v0.4.1-gke.0
        args:
        - --config-file=/prometheus/config/config.yaml
        - --config-file-output=/prometheus/config_out/config.yaml
        - --reload-url=http://localhost:19090/-/reload
        - --listen-address=:19091
        ports:
        - name: cfg-rel-metrics
          containerPort: 19091
        resources:
          limits:
            cpu: 10m
            memory: 32M
          requests:
            cpu: 5m
            memory: 16M
        volumeMounts:
        - name: config
          mountPath: /prometheus/config
          readOnly: true
        - name: config-out
          mountPath: /prometheus/config_out
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          capabilities:
            drop:
            - all
          runAsUser: 1000
          runAsGroup: 1000
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
      serviceAccountName: collector
      automountServiceAccountToken: true
      priorityClassName: gmp-critical
      tolerations:
      - effect: NoExecute
        operator: Exists
      - effect: NoSchedule
        operator: Exists
      volumes:
      - name: storage
        emptyDir: {}
      - name: config
        configMap:
          name: collector
      - name: config-out
        emptyDir: {}
      - name: collection-secret
        secret:
          secretName: collection
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: gmp-system
  name: rule-evaluator
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: rule-evaluator
  replicas: 1
  template:
    metadata:
      labels:
        app: managed-prometheus-rule-evaluator
        app.kubernetes.io/name: rule-evaluator
      annotations:
        components.gke.io/component-name: managed_prometheus
        # The emptyDir for the storage and config directories prevents cluster
        # autoscaling unless this annotation is set.
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
        kubernetes.io/os: linux
      containers:
      - name: evaluator
        image: gke.gcr.io/prometheus-engine/rule-evaluator:v0.4.1-gke.0
        args:
        - --config.file=/prometheus/config_out/config.yaml
        - --web.listen-address=:19092
        - --export.user-agent=rule-evaluator/0.4.1 (mode:kubectl)
        ports:
        - name: r-eval-metrics
          containerPort: 19092
        livenessProbe:
          httpGet:
            path: /-/healthy
            port: 19092
            scheme: HTTP
        readinessProbe:
          httpGet:
            path: /-/ready
            port: 19092
            scheme: HTTP
        resources:
          limits:
            cpu: 1000m
            memory: 1G
          requests:
            cpu: 100m
            memory: 200M
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - all
          privileged: false
          runAsGroup: 1000
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - name: config-out
          mountPath: /prometheus/config_out
          readOnly: true
        - name: rules
          mountPath: /etc/rules
          readOnly: true
        - name: rules-secret
          mountPath: /etc/secrets
          readOnly: true
      - name: config-reloader
        image: gke.gcr.io/prometheus-engine/config-reloader:v0.4.1-gke.0
        args:
        - --config-file=/prometheus/config/config.yaml
        - --config-file-output=/prometheus/config_out/config.yaml
        - --watched-dir=/etc/rules
        - --watched-dir=/etc/secrets
        - --reload-url=http://localhost:19092/-/reload
        - --listen-address=:19093
        ports:
        - containerPort: 19093
          name: cfg-rel-metrics
        resources:
          limits:
            cpu: 10m
            memory: 32M
          requests:
            cpu: 5m
            memory: 16M
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - all
          privileged: false
          runAsGroup: 1000
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - name: config
          mountPath: /prometheus/config
          readOnly: true
        - name: config-out
          mountPath: /prometheus/config_out
        - name: rules
          mountPath: /etc/rules
          readOnly: true
        - name: rules-secret
          mountPath: /etc/secrets
          readOnly: true
      priorityClassName: gmp-critical
      serviceAccountName: collector
      automountServiceAccountToken: true
      volumes:
      - name: config
        configMap:
          defaultMode: 420
          name: rule-evaluator
      - name: config-out
        emptyDir: {}
      - name: rules
        configMap:
          defaultMode: 420
          name: rules-generated
      - name: rules-secret
        secret:
          defaultMode: 420
          secretName: rules
---
apiVersion: v1
kind: Service
metadata:
  namespace: gmp-public
  name: alertmanager
spec:
  selector:
    app.kubernetes.io/name: alertmanager
  clusterIP: None
  ports:
  - port: 9093
    targetPort: 9093
    name: alertmanager
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: gmp-public
  name: alertmanager
spec:
  selector:
    matchLabels:
      app: managed-prometheus-alertmanager
      app.kubernetes.io/name: alertmanager
  serviceName: alertmanager
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: alertmanager
        app: managed-prometheus-alertmanager
      annotations:
        components.gke.io/component-name: managed_prometheus
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
    spec:
      containers:
      - name: alertmanager
        image: prom/alertmanager:latest
        args:
        - --config.file=/alertmanager/config_out/config.yaml
        - --storage.path=/alertmanager-data
        ports:
        - containerPort: 9093
          name: alertmanager
        resources:
          limits:
            cpu: 1000m
            memory: 1G
          requests:
            cpu: 100m
            memory: 200M
        volumeMounts:
        - name: config
          mountPath: /alertmanager/config_out
          readOnly: true
        - name: alertmanager-data
          mountPath: /alertmanager-data
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - all
          privileged: false
          runAsGroup: 1000
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
      - name: config-reloader
        image: gke.gcr.io/prometheus-engine/config-reloader:v0.4.1-gke.0
        args:
        - --config-file=/alertmanager/config.yaml
        - --config-file-output=/alertmanager/config_out/config.yaml
        - --reload-url=http://localhost:9093/-/reload
        - --listen-address=:19091
        ports:
        - name: cfg-rel-metrics
          containerPort: 19091
        resources:
          limits:
            cpu: 10m
            memory: 32M
          requests:
            cpu: 5m
            memory: 16M
        volumeMounts:
        - name: config
          mountPath: /alertmanager
          readOnly: true
        - name: alertmanager-data
          mountPath: /alertmanager/config_out
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          capabilities:
            drop:
            - all
          runAsUser: 1000
          runAsGroup: 1000
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
      priorityClassName: gmp-critical
      tolerations:
      - effect: NoExecute
        operator: Exists
      - effect: NoSchedule
        operator: Exists
      volumes:
      - name: config
        configMap:
          name: alertmanager
      - name: alertmanager-data
        emptyDir: {}
